# Draftsman

./: .gitignore  .gitmodules  GenerateProjectFiles.bat  Generate_MinGW_Makefiles.bat  Generate_VisualStudio_Project.bat  LICENSE.md  README.md  Setup.bat
Draftsman/Config/: DefaultProjectConfig.cmake  DefaultProjectConfig.ini
Draftsman/Modules/: CMakeLists.txt
Draftsman/Modules/DraftsmanCore/: CMakeLists.txt
Draftsman/Modules/DraftsmanCore/Include/: DCConfig  DCGraph  DCNode
Draftsman/Modules/DraftsmanCore/Include/DraftsmanCore/: DraftsmanCore.Config.hpp  DraftsmanCore.Graph.hpp  DraftsmanCore.Node.hpp  DraftsmanCore.Types.hpp  DraftsmanCore.hpp
Draftsman/Modules/DraftsmanCore/Source/DraftsmanCore/: DraftsmanCore.Config.cpp  DraftsmanCore.Graph.cpp  DraftsmanCore.Node.cpp  DraftsmanCore.cpp
Draftsman/Modules/DraftsmanCore/Source/DraftsmanCore/__private__/: DraftsmanCore.__private__.Config.cpp  DraftsmanCore.__private__.Config.hpp  DraftsmanCore.__private__.GenerateUUID.cpp  DraftsmanCore.__private__.GenerateUUID.hpp
Draftsman/Modules/DraftsmanGUI/: CMakeLists.txt
Draftsman/Modules/DraftsmanGUI/Include/: DGConfig  DGGraph  DGNode  DGTypes
Draftsman/Modules/DraftsmanGUI/Include/DraftsmanGUI/: DraftsmanGUI.Config.h  DraftsmanGUI.Graph.h  DraftsmanGUI.Graph.hpp  DraftsmanGUI.Node.h  DraftsmanGUI.Node.hpp  DraftsmanGUI.hpp
Draftsman/Modules/DraftsmanGUI/Source/DraftsmanGUI/: DraftsmanGUI.Config.cpp  DraftsmanGUI.Graph.cpp  DraftsmanGUI.Node.cpp  DraftsmanGUI.cpp
Draftsman/Modules/DraftsmanGUI/Source/DraftsmanGUI/__private__/: DraftsmanGUI.__private__.Config.cpp  DraftsmanGUI.__private__.Config.h  DraftsmanGUI.__private__.Config.hpp  DraftsmanGUI.__private__.ForwardQProperty.h  DraftsmanGUI.__private__.ForwardQProperty.hpp  DraftsmanGUI.__private__.GraphScene.cpp  DraftsmanGUI.__private__.GraphScene.h  DraftsmanGUI.__private__.GraphView.cpp  DraftsmanGUI.__private__.GraphView.h  DraftsmanGUI.__private__.GraphView.hpp  DraftsmanGUI.__private__.NodePainter.cpp  DraftsmanGUI.__private__.NodePainter.h
Draftsman/Modules/Test_DraftsmanCore/: CMakeLists.txt
Draftsman/Modules/Test_DraftsmanCore/Include/: Test_DraftsmanCore.hpp
Draftsman/Modules/Test_DraftsmanCore/Source/: Test_DraftsmanCore.cpp
Draftsman/Modules/Test_DraftsmanGUI/: CMakeLists.txt
Draftsman/Modules/Test_DraftsmanGUI/Include/: Test_DraftsmanGUI.hpp
Draftsman/Modules/Test_DraftsmanGUI/Source/: Test_DraftsmanGUI.cpp
Draftsman/Source/: CMakeLists.txt
Draftsman/Source/DraftsmanCore/: CMakeLists.txt
Draftsman/Source/DraftsmanCore/Include/: DCTypes
Draftsman/Source/DraftsmanCore/Include/DraftsmanCore/: DraftsmanCore.Graph.hpp
Draftsman/Source/DraftsmanCore/Source/DraftsmanCore/: DraftsmanCore.Node.cpp
Draftsman/Source/DraftsmanCore/Source/DraftsmanCore/__private__/: DraftsmanCore.__private__.GenerateUUID.cpp  DraftsmanCore.__private__.GenerateUUID.hpp
Draftsman/Source/DraftsmanGUI/: CMakeLists.txt
Draftsman/Source/DraftsmanGUI/Include/: DGConfig  DGGraph  DGNode
Draftsman/Source/DraftsmanGUI/Include/DraftsmanGUI/: DraftsmanGUI.Config.hpp  DraftsmanGUI.Types.hpp
Draftsman/Source/DraftsmanGUI/Source/DraftsmanGUI/: DraftsmanGUI.Node.cpp
Draftsman/Source/DraftsmanGUI/Source/DraftsmanGUI/__private__/: DraftsmanGUI.__private__.Config.cpp  DraftsmanGUI.__private__.ForwardQProperty.hpp  DraftsmanGUI.__private__.GraphScene.hpp  DraftsmanGUI.__private__.NodePainter.cpp  DraftsmanGUI.__private__.NodePainter.hpp
Draftsman/Source/Test_DraftsmanCore/: CMakeLists.txt
Draftsman/Source/Test_DraftsmanCore/Include/: Test_DraftsmanCore.hpp
Draftsman/Source/Test_DraftsmanCore/Source/: Test_DraftsmanCore.cpp
Draftsman/Source/Test_DraftsmanGUI/Source/: Test_DraftsmanGUI.cpp
Draftsman/Tools/Scripts/Hooks/: post-checkout
Draftsman/Tools/Scripts/Windows/: GenerateProjectFiles.bat  Generate_MinGW_Makefiles.bat  Generate_VisualStudio_Project.bat  ReadConfig.bat  SetupHooks.bat
Draftsman/Tools/Submodules/ProjectDependencies/: .config
Draftsman/Tools/Submodules/ProjectHooks/: post-merge
